--- a/InClassActivities/FirstClass/index.html
+++ b/InClassActivities/FirstClass/index.html
@@ -8,6 +8,8 @@
 		<h1>My header goes here</h1>
 	</header>
 
+	<p>Update Example</p>
+
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque doloribus iure, sed pariatur tempore nesciunt ipsa sequi deleniti fugit laudantium?</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, asperiores.</p>
 
