--- a/Assignments/wbarnhart/resume/Resume.html
+++ b/Assignments/wbarnhart/resume/Resume.html
@@ -2,7 +2,7 @@
 <html><center>
 <head><link rel="stylesheet" type="text/css" href="site.css">
 	</link>
-	<title>Resume</title>
+	<title>Resume Update</title>
 </head>
 <body><font face="Arial">
 	<header>
