Quiz and resume
Fixed it up a bit, quiz isn't done in my eyes at all.

--- a/Assignments/jharper4/quiz/quiz.html
+++ b/Assignments/jharper4/quiz/quiz.html
@@ -27,7 +27,8 @@
 				<legend>Select one</legend>
 				<p>What is under 5</p>
 				<select name"select_answer" id="select_answer">
-					<option value="72">3</option>
+					<option value="Select Answer">Select Answer</option>
+					<option value="72">72</option>
 					<option value="4">4</option>
 					<option value="6">6</option>
 				</select>
