Revised Quiz Sheet

--- a/Assignments/abrand/Quiz Sheet.html
+++ b/Assignments/abrand/Quiz Sheet.html
@@ -6,10 +6,15 @@
 </head>
 <body>
 	<form>
-		<p>Track and Field Quiz</p1><style class="center"></style> 
-		<p> Austin Brand </p>
-		<p> CS 129 </p>
-		<p> Each question is worth 10 points. </p>
+		<H2 class="center">Track and Field Quiz</H2>
+		<H3> Austin Brand </H3>
+		<H3> CS 129 </H3>
+		<H3> Each question is worth 10 points. </H3>                             
+		 <H4 class="center"> 90-100% = A <br>
+			 80-89% = B <br>
+			 70-79% = C <br>
+			 60-69% = D <br>
+			 59 and below = F </H4>
 		<fieldset>
 		<legend> Question 1: How high are the Olympic Men's 110m hurdles? </legend>
 			<ul>
