Finishing Final Touches
I swear i'm done.

--- a/Assignments/DConner/JeveScrept/CardGame/grats.html
+++ b/Assignments/DConner/JeveScrept/CardGame/grats.html
@@ -3,6 +3,8 @@
 <head>
 <script src="heresJohny.js"></script>
 <link rel="stylesheet" type="text/css" href="whatIsGoingOn.css">
+<link rel="shortcut icon" href="CardC.png">
+<title>Cards?</title>
 </head>
 
 <body onload="getMahAxe()">
