--- a/Assignments/abrand/Quiz Sheet.html
+++ b/Assignments/abrand/Quiz Sheet.html
@@ -7,9 +7,9 @@
 <body>
 	<form>
 		<H2 class="center">Track and Field Quiz</H2>
-		<H3> Austin Brand </H3>
-		<H3> CS 129 </H3>
-		<H3> Each question is worth 10 points. </H3>                             
+		<H3 class="center"> Austin Brand </H3>
+		<H3 class="center"> CS 129 </H3>
+		<H3 class="center"> Each question is worth 10 points. </H3>                             
 		 <H4 class="center"> 90-100% = A <br>
 			 80-89% = B <br>
 			 70-79% = C <br>
@@ -18,13 +18,13 @@
 		<fieldset>
 		<legend> Question 1: How high are the Olympic Men's 110m hurdles? </legend>
 			<ul>
-				<li><label class="align" for="a) 39 inches">a) 39"</label>
+				<li><label class="align" for="39 inches">a) 39"</label>
 					<input id="a) 39 inches" type="text" name="a) 39 inches" placeholder="Enter Correct or Incorrect">
 				</li>
-				<li><label class="align" for="b) 42 inches">b) 42"</label>
+				<li><label class="align" for="42 inches">b) 42"</label>
 					<input id="b) 42 inches" type="text" name="b) 42 inches" placeholder="Enter Correct or Incorrect">
 				</li>
-				<li><label class="align" for="c) 36 inches">c) 36"</label>
+				<li><label class="align" for="36 inches">c) 36"</label>
 					<input id="c) 36 inches" type="text" name="c) 36 inches" placeholder="Enter Correct or Incorrect">
 				</li>
 
@@ -35,9 +35,9 @@
 			<p> Select One of the following: </p>
 			<select name="select_answer" id="select_answer">
 				<option value=" "> </option>
-					<option value="a) 36 inches">a) 36"</option>
-					<option value="b) 39 inches">b) 39"</option>
-					<option value="c) 42 inches">C) 42"</option>
+					<option value="36 inches">a) 36"</option>
+					<option value="39 inches">b) 39"</option>
+					<option value="42 inches">C) 42"</option>
 			</select>
 		</fieldset>
 		<fieldset>
@@ -45,15 +45,15 @@
 			<ul> 
 				<li>
 					<label class="outset" for="choice_1"> a) 12.8 (Aries Merrit, USA) </label>
-					<input type="radio" name="choice_option" id="choice_1" value="a) 12.8 (Aries Merrit, USA)"> 
+					<input type="radio" name="choice_option" id="choice_1" value="12.8 (Aries Merrit, USA)"> 
 				</li>
 				<li>
 					<label class="outset" for="choice_2">b) 12.88 (Liu Xiang, China) </label>
-					<input type="radio" name="choice_option" id="choice_2" value="b) 12.88 (Liu Xiang, China)"> 
+					<input type="radio" name="choice_option" id="choice_2" value="12.88 (Liu Xiang, China)"> 
 				</li>
 				<li>
 					<label class="outset" for="choice_3">c) 12.73 (Dayron Robles, Cuba)</label>
-					<input type="radio" name="choice_option" id="choice_3" value="c) 12.73 (Dayron Robles, Cuba)"> 
+					<input type="radio" name="choice_option" id="choice_3" value="12.73 (Dayron Robles, Cuba)"> 
 				</li>
 			</ul>
 		</fieldset>
@@ -80,15 +80,15 @@
 			<ul> 
 				<li>
 					<label class="outset" for="chosen_1"> a) 43.1 (Usain Bolt, Jamaica) </label>
-					<input type="radio" name="chosen_option" id="chosen_1" value="a) 43.1 (Usain Bolt, Jamaica)"> 
+					<input type="radio" name="chosen_option" id="chosen_1" value="43.1 (Usain Bolt, Jamaica)"> 
 				</li>
 				<li>
 					<label class="outset" for="chosen_2">b) 43.18 (Michael Johnson, USA) </label>
-					<input type="radio" name="chosen_option" id="chosen_2" value="b) 43.18 (Michael Johnson, USA)"> 
+					<input type="radio" name="chosen_option" id="chosen_2" value="43.18 (Michael Johnson, USA)"> 
 				</li>
 				<li>
 					<label class="outset" for="chosen_3">c) 43.67 (Yohan Blake, Jamaica)</label>
-					<input type="radio" name="chosen_option" id="chosen_3" value="c) 43.67 (Tyson Gay, USA)"> 
+					<input type="radio" name="chosen_option" id="chosen_3" value="43.67 (Tyson Gay, USA)"> 
 				</li>
 			</ul>
 		</fieldset>
@@ -97,15 +97,15 @@
 			<ul> 
 				<li>
 					<label class="outset" for="choices_1"> a) 9.58 (Usain Bolt, Jamaica) </label>
-					<input type="radio" name="choices_option" id="choices_1" value="a) 9.58 (Usain Bolt, Jamaica)"> 
+					<input type="radio" name="choices_option" id="choices_1" value="9.58 (Usain Bolt, Jamaica)"> 
 				</li>
 				<li>
 					<label class="outset" for="choices_2">b) 9.69 (Tyson Gay, USA) </label>
-					<input type="radio" name="choices_option" id="choices_2" value="b)  9.69 (Tyson Gay, USA)"> 
+					<input type="radio" name="choices_option" id="choices_2" value="9.69 (Tyson Gay, USA)"> 
 				</li>
 				<li>
 					<label class="outset" for="choices_3">c) 9.72 (Carl Lewis, USA)</label>
-					<input type="radio" name="choices_option" id="choices_3" value="c)  9.72 (Ben Johnson, Canada)"> 
+					<input type="radio" name="choices_option" id="choices_3" value="9.72 (Ben Johnson, Canada)"> 
 				</li>
 			</ul>
 		</fieldset>
@@ -114,15 +114,15 @@
 			<ul> 
 				<li>
 					<label class="outset" for="decision_a"> a) 36.84 (Jamaica) </label>
-					<input type="radio" name="decision_option" id="decision_1" value="a) 36.84 (Jamaica)"> 
+					<input type="radio" name="decision_option" id="decision_1" value="36.84 (Jamaica)"> 
 				</li>
 				<li>
 					<label class="outset" for="decision_b">b) 36.82 (USA) </label>
-					<input type="radio" name="decision_option" id="decision_2" value="b) 36.82 (USA)"> 
+					<input type="radio" name="decision_option" id="decision_2" value="36.82 (USA)"> 
 				</li>
 				<li>
 					<label class="outset" for="decision_c">c) 37.04 (Great Britain)</label>
-					<input type="radio" name="decision_option" id="decision_3" value="c) 37.04 (Great Britain)"> 
+					<input type="radio" name="decision_option" id="decision_3" value="37.04 (Great Britain)"> 
 				</li>
 			</ul>
 		</fieldset>
@@ -131,9 +131,9 @@
 			<p> Select One of the following: </p>
 			<select name="select_answer" id="select_answer">
 				<option value=" "> </option>
-					<option value="a) 6">a) 6</option>
-					<option value="b) 3">b) 3</option>
-					<option value="c) 4">C) 4</option>
+					<option value="6">a) 6</option>
+					<option value="3">b) 3</option>
+					<option value="4">C) 4</option>
 			</select>
 		</fieldset>
 		<fieldset>
@@ -141,9 +141,9 @@
 			<p> Select One of the following: </p>
 			<select name="select_answer" id="select_answer">
 				<option value=" "> </option>
-					<option value="a) 2">a) 2</option>
-					<option value="b) 8">b) 8</option>
-					<option value="c) 4">C) 4</option>
+					<option value="2">a) 2</option>
+					<option value="8">b) 8</option>
+					<option value="4">C) 4</option>
 			</select>
 		</fieldset>
 		<fieldset>
@@ -151,9 +151,9 @@
 			<p> Select One of the following: </p>
 			<select name="select_answer" id="select_answer">
 				<option value=" "> </option>
-					<option value="a) 29 feet and 4.5 inches (Mike Powell, USA)">a) 29 feet and 4.5 inches (Mike Powell, USA) </option>
-					<option value="b) 28 feet and 8 inches (Carl Lewis, USA)">b) 28 feet and 8 inches (Carl Lewis, USA) </option>
-					<option value="c) 31 feet and 2 inches (Yohan Blake, Jamaica)">C) 31 feet and 2 inches (Yohan Blake, Jamaica) </option>
+					<option value="29 feet and 4.5 inches (Mike Powell, USA)">a) 29 feet and 4.5 inches (Mike Powell, USA) </option>
+					<option value="28 feet and 8 inches (Carl Lewis, USA)">b) 28 feet and 8 inches (Carl Lewis, USA) </option>
+					<option value="31 feet and 2 inches (Yohan Blake, Jamaica)">C) 31 feet and 2 inches (Yohan Blake, Jamaica) </option>
 			</select>
 		</fieldset>
 	</form>
