--- a/Assignments/dfarnsworth/JS/TemplateQuizForm.html
+++ b/Assignments/dfarnsworth/JS/TemplateQuizForm.html
@@ -12,7 +12,7 @@
 		</div>
 
 		<a href="mailto:dfarnswo@wvup.edu">
-			<div id="email">
+			<div id="email" style="border: none">
 				dfarnswo@wvup.edu
 			</div>
 		</a>
@@ -26,11 +26,11 @@
 		<table style="width: 100%">
 			<thead style="font-size: 16px">
 				<th style="width: 18%">
-					<a href="http://www.1stwebdesigner.com/design/generators-improve-workflow/" target="iframe1"><span style="color: white">DESIGN</span></a>
+					<a href="http://www.1stwebdesigner.com/design/generators-improve-workflow/" target="iframe1">DESIGN</a>
 				</th>
 
 				<th style="width: 18%">
-					<a href="http://www.w3schools.com" target="iframe1"><span style="color: white">W3SCHOOLS</span></a>
+					<a href="http://www.w3schools.com" target="iframe1">W3SCHOOLS</a>
 				</th>
 
 				<th style="width: 28%">
@@ -38,11 +38,11 @@
 				</th>
 
 				<th style="width: 18%">
-					<a href="http://www.codecademy.com/learn/"><span style="color: white">CODECADEMY</span></a>
+					<a href="http://www.codecademy.com/learn/">CODECADEMY</a>
 				</th>
 
 				<th style="width: 18%">
-					<a href="http://inequalityforall.com/" target="iframe1"><span style="color: white">ABOUT</span></a>
+					<a href="http://inequalityforall.com/" target="iframe1">ABOUT</a>
 				</th>
 			</thead>
 		</table>
@@ -77,9 +77,13 @@
 	</div>
 
 	<div id="scroll">
+
 		<iframe src="" name="iframe1" frameborder="0" width="100%" height="550px"></iframe>
+
 	</div>
+
 	<div id="footer" style="background-color: midnightblue; height: 550px">
+
 		<h1 id="footer1" style="text-align: center; color: ivory">Hello World!</h1>
 
 		<button style="float: right" type="button" onclick="document.getElementById('footer1').style.color = 'red'">Red</button>
