--- a/Assignments/dfarnsworth/JS/TemplateQuizForm.html
+++ b/Assignments/dfarnsworth/JS/TemplateQuizForm.html
@@ -5,7 +5,7 @@
 	<title>HTML QUIZ</title>
 </head>
 
-<body id="id1">
+<body>
 	<div id="heading">
 		<div id="name">
 			<strong>DUSTIN FARNSWORTH</strong>
@@ -16,7 +16,13 @@
 				dfarnswo@wvup.edu
 			</div>
 		</a>
+		
+		<a id="sign_in" href="" target="">Sign In</a>
+		<a id="create" href="" target="">Create Account</a>
+
 	</div>
+
+	
 
 	<div id="clear">
 		empty
