--- a/Assignments/DConner/JeveScrept/JavascriptSite.html
+++ b/Assignments/DConner/JeveScrept/JavascriptSite.html
@@ -3,6 +3,7 @@
 <head>
 <title>Nyeh Nyeh Nyeh.</title>
 <link rel="shortcut icon" href="FOURTH.png">
+<link rel="stylesheet" type="text/css" href="CoffeeDude.css">
 <script src="legomyego.js"></script>
 </head>
 
