--- a/Assignments/dfarnsworth/JS/TemplateQuizForm.html
+++ b/Assignments/dfarnsworth/JS/TemplateQuizForm.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+
 	<link rel="stylesheet" type="text/css" href="TemplateQuizForm.css"/>
+
 	<title>HTML QUIZ</title>
+
 </head>
 
 <body>
@@ -17,8 +21,8 @@
 			</div>
 		</a>
 		
-		<a id="sign_in" href="" target="">Sign In</a>
-		<a id="create" href="" target="">Create Account</a>
+		<a id="sign_in" href="" target="">Log In</a>
+		<a id="create" href="test.html" target="_parent">Sign Up</a>
 
 	</div>
 
@@ -87,7 +91,7 @@
 		<iframe src="" name="iframe1" frameborder="0" width="100%" height="550px"></iframe>
 
 	</div>
-
+<!--
 	<div id="footer" style="background-color: midnightblue; height: 550px">
 
 		<h1 id="footer1" style="text-align: center; color: ivory">Hello World!</h1>
@@ -98,5 +102,6 @@
 
 		<button style="float: right" type="button" onclick="document.getElementById('footer1').style.color = 'yellow'">Yellow</button>
 	</div>
+-->
 </body>
 </html>
