--- a/Assignments/DConner/JeveScrept/JavascriptSite.html
+++ b/Assignments/DConner/JeveScrept/JavascriptSite.html
@@ -9,7 +9,7 @@
 
 
 <body>
-<div style="text-align: center; margin-top: 100px;">
+<div class=spilledDaBeans>
    <div style="margin-bottom:10%;">
    <div style="display: inline; margin-right: 20%;">
       <img id="secondGlyph" src="SECOND.png" onclick="hisEgo()" />
