--- a/Assignments/dfarnsworth/JS/test.html
+++ b/Assignments/dfarnsworth/JS/test.html
@@ -20,7 +20,7 @@
 
 		<h3>Name</h3>
 
-		<p id="insert_profile_name">:</p>
+		<p id="insert_profile_name">...</p>
 
 		<button onClick="_delete()">Delete Profile</button>
 	</div>
