Fixed a spelling typo

--- a/Assignments/clinville/JavascriptAssignment2/JavascriptAssignment.html
+++ b/Assignments/clinville/JavascriptAssignment2/JavascriptAssignment.html
@@ -19,7 +19,7 @@
 		<h3><center>
 			DOWNLOAD YOUR LINK <span style="color:blue">HERE</span><br><br>
 			I don't know what you are downloading but it better be worth all of the viruses you could get if you download the wrong thing. Unfortunetly most download sites look like this so you have to be super extra awesome to not mess up and download the wrong thing.<br><br>
-			You could be trying to download a movie or an episode or a souffle recipe. Just make sure you use it wisely because sometimes people even download illegal stuff. Which is bad. Maybe that's why the Virus God puts all of the virus downloads here so that Karma can slap you accross the face. Who knows? <br>*insert disco music here*
+			You could be trying to download a movie, or an episode of your favorite TV show that you missed because you were in class, or a souffle recipe. Just make sure you use it wisely because sometimes people even download illegal stuff. Which is bad. Maybe that's why the Virus God puts all of the virus downloads here so that Karma can slap you across the face. Who knows? <br>*insert disco music here*
 		</center></h3>
 </div>
 	<div id="Hidden" style="display:none"><a href="JavaLied.html"><center><h3>This is the right one. Click here.</h3></center></a></div>
