--- a/Assignments/jharper4/quiz/quiz.html
+++ b/Assignments/jharper4/quiz/quiz.html
@@ -2,8 +2,14 @@
 <head>
 	<title>Quiz</title>
 
-	<link rel="stylesheet" href="quizz.css">
+	<link rel="stylesheet" type="text/css" href="quiz.css"/>
 </head>
+<div id="header">
+	<p id="name"> Quiz time!</p>
+	</div>
+	<div class="left">
+	</div>
+<div class="quiz">
 <body>
 	<form>
 		<fieldset>
@@ -101,6 +107,6 @@
 				</li>
 			</fieldset>
 
-
 </body>
+</div>
 </html>
