final update with ul sub list

--- a/InClassActivities/Object Oriented/index.html
+++ b/InClassActivities/Object Oriented/index.html
@@ -9,5 +9,22 @@
 	<h2>JS Object Oriented</h2>
 	
 
+	<div>
+		<ul class="menu">
+			<li>Option 1
+				<ul class="submenu">
+					<li>Sub Option 1</li>
+					<li>Sub Option 2</li>
+					<li>Sub Option 3</li>
+					<li>Sub Option 4</li>
+				</ul>
+			</li>
+			<li>Option 2</li>
+			<li>Option 3</li>
+			<li>Option 4</li>
+			<li>Option 5</li>
+		</ul>
+	</div>
+
 </body>
 </html>
