--- a/Assignments/dfarnsworth/JS/TemplateQuizForm.html
+++ b/Assignments/dfarnsworth/JS/TemplateQuizForm.html
@@ -21,8 +21,8 @@
 			</div>
 		</a>
 		
-		<a id="sign_in" href="" target="">Log In</a>
-		<a id="create" href="test.html" target="_parent">Sign Up</a>
+		<a id="log_in" href="" target=""><strong>Log In</strong></a>
+		<a id="sign_up" href="test.html" target="_parent"><strong>Sign Up</strong></a>
 
 	</div>
 
