--- a/Assignments/dfarnsworth/JS/test.html
+++ b/Assignments/dfarnsworth/JS/test.html
@@ -12,7 +12,7 @@
 
 		<input id="_create" type="text" value placeholder="First and last name"/>
 
-		<button onClick="_update()">Update Profile</button>
+		<button onClick="_Create()">Update Profile</button>
 	</div>
 
 	<div id="two">
