update on wvup recreation
update

--- a/Assignments/shinzman/wvup recreate/wvupreplica.html
+++ b/Assignments/shinzman/wvup recreate/wvupreplica.html
@@ -21,7 +21,51 @@
 				<th>Search</th>
 			</tr>
 		</table>
-		<div class="div1"></div>
+		<div class="div1">
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<ul>
+				<li>August 2014 Graduation</li>
+				<li>Directions to Campus</li>
+				<li>Distinguished Performance Series</li>
+				<li>Employment Opportunities</li>
+				<li>General Financial Aid Info</li>
+				<li>Life at WVU Parkersburg</li>
+				<li>Presidential Search</li>
+				<li>Programs of Study</li>
+				<li>Jackson County Center</li>
+				<li>WVCCA-WVADE 2014 Conference</li>
+			</ul>
+			<h4 class="center">News Categories</h4>
+			<select class="sc1">
+				<option>Select Category</option>
+				<option>Academic Affairs</option>
+				<option>Athletics</option>
+				<option>Business and Economics</option>
+				<option>Campus Projects</option>
+				<option>Career Services and Cooperative Education</option>
+				<option>Construction</option>
+				<option>Distinguished Performance Series</option>
+				<option>Education and Humanities</option>
+				<option>Foundation</option>
+				<option>General News</option>
+				<option>Health Sciences</option>
+				<option>Non-Traditional Programs</option>
+				<option>Safety</option>
+				<option>Science, Technology, Engineering and Mathematics</option>
+				<option>Social Justice</option>
+				<option>Social Sciences and Language</option>
+				<option>Student Activities</option>
+				<option>Student Government Association</option>
+				<option>Student Services</option>
+				<option>Sustainability</option>
+				<option>Veterans</option>
+				<option>Workforce & Community Education</option>
+			</select>
+			<br>
+			<br>
+			<br>
+			<div class="divFourth"></div>
+		</div>
 		<div class="div2"></div>
 		<div class="div3">
 			<div class="div4">
@@ -64,7 +108,39 @@
 				<p class="center"><a href='#top'>Return to Top</a></p>
 			</div>
 			<div class="div5">
-				<div class="div7"></div>
+				<div class="div7">
+					<h4 class="center">Calendar</h4>
+					<div class="divCalendar"></div>
+					<h4 class="center">Upcoming Events</h4>
+					<div class="div8">
+						<p>Oct 11, 2014
+							<br>
+							Men's Soccer vs. Kings Academy
+							<br>
+							WVU Parkersburg
+						</p>
+						<p>Oct 12, 2014
+							<br>
+							Women's Volleyball vs. UC Beckley
+							<br>
+							WVU Parkersburg
+						</p>
+						<p>Oct 12, 2014
+							<br>
+							Men's Soccer vs. UC Beckley
+							<br>
+							WVU Parkersburg
+						</p>
+						<p>Oct 13, 2014
+							<br>
+							Mid-Term Grades Due
+							<br>
+							<br>
+							all events
+						</p>
+
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="div6">
@@ -86,7 +162,12 @@
 				WVU Parkersburg is an affiliated institution of <a href="">West Virginia University</a> | An <a href="">Equal Opportunity/Affirmative Action</a> institution
 				<br>
 				Visit Us</font></p>
-			<div class="divContact"></div>
+			<div class="divContact">
+				<div class="divContact1"></div>
+				<div class="divContact2"></div>
+				<div class="divContact3"></div>
+				<div class="divContact4"></div>
+			</div>
 		</div>
 	</div>
 
