another update on wvup recreation
update

--- a/Assignments/shinzman/wvup recreate/wvupreplica.html
+++ b/Assignments/shinzman/wvup recreate/wvupreplica.html
@@ -82,9 +82,9 @@
 					<p>West Virginia University at Parkersburg Board of Governors will meet Wednesday, Oct. 8. The meeting will take place at 3:15 p.m. in room 2209.</p>
 					<br>
 					<p>View the complete agenda:</p>
-					<p>October 8, 2014</p>
+					<p class="blueText">October 8, 2014</p>
 					<br>
-					<p>...Read More >></p>
+					<p class="blueText">...Read More >></p>
 				</div>
 				<div class="bottomBorder">
 					<h3>WVU Parkersburg recieves grant to promote diversity and equality</h3>
@@ -99,7 +99,7 @@
 					<p>West Virginia University at Parkersburg is offering new and improved services to help students and alumni find jobs and assist employers in recruiting efforts. Recently, WVU Parkersburg launched College Central Network (CCN), a career services portal. Through the site, students and alumni can search listings, post a resume, apply for...Read More »</p>
 				</div>
 				<div class="otherBottomBorder">
-					<p>Older Entries >></p>
+					<p class="blueText">Older Entries >></p>
 					<div class="divFirst"></div>
 					<div class="divSecond"></div>
 					<div class="divThird"></div>
@@ -109,29 +109,29 @@
 			</div>
 			<div class="div5">
 				<div class="div7">
-					<h4 class="center">Calendar</h4>
+					<h3 class="center">Calendar</h3>
 					<div class="divCalendar"></div>
-					<h4 class="center">Upcoming Events</h4>
+					<h3 class="center">Upcoming Events</h3>
 					<div class="div8">
-						<p>Oct 11, 2014
+						<p class="blueText">Oct 11, 2014
 							<br>
 							Men's Soccer vs. Kings Academy
 							<br>
 							WVU Parkersburg
 						</p>
-						<p>Oct 12, 2014
+						<p class="blueText">Oct 12, 2014
 							<br>
 							Women's Volleyball vs. UC Beckley
 							<br>
 							WVU Parkersburg
 						</p>
-						<p>Oct 12, 2014
+						<p class="blueText">Oct 12, 2014
 							<br>
 							Men's Soccer vs. UC Beckley
 							<br>
 							WVU Parkersburg
 						</p>
-						<p>Oct 13, 2014
+						<p class="blueText">Oct 13, 2014
 							<br>
 							Mid-Term Grades Due
 							<br>
