Redoing somethings on WVUP assignment
still not close to fixed!

--- a/Assignments/abrand/WVUP.html
+++ b/Assignments/abrand/WVUP.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<H2> <li> Home, About, Academics, Current Students, Future Students, High School Students, Faculty & Staff, Search </li> </H2>
+	 <div class="horizontal"> <li> Home  </div>  <div class="horizontal"> About </div>    Academics      Current Students    Future Students    High School Students     Faculty & Staff       Search </li> </H2> 
 
 	<body class="home page page-id-1005 page-template page-template-landing-page-wvup-php page-home page-parent-home page-parent-home chrome win chrome v37 front-page">
                  
