nchannel recreate update
just an update

--- a/Assignments/shinzman/nchannel recreate/nchannelreplica.html
+++ b/Assignments/shinzman/nchannel recreate/nchannelreplica.html
@@ -20,67 +20,111 @@
 		</div>
 	</div>
 	<div class="div2 centerdiv">
-		<h2>What we can integrate...</h2>
-		<p>Review our catalog ot see if we have connectors ready for the systems you currently use. These connectors integrate your existing systems into a single powerful platform</p>
-		<br>
-		<h4>Don't see a connector you need?</h4>
+		<h2 class="greyheader">What we can integrate...</h2>
+		<p class="greytext">Review our catalog ot see if we have connectors ready for the systems you currently use. These connectors integrate your existing systems into a single powerful platform
+			<br><br>
+			<strong>Don't see a connector you need?</strong>
+			<br>
+		</p>
 		<button>Let us build it for you!</button>
-		<br>
-		<h5><a href="">all connectors</a> / <a href="">eCommerce</a> / <a href="">marketplaces</a> / <a href="">ERP/accounting</a> / <a href="">POS</a></h5>
+		<br><br><br>
+		<p class="greytext2"><a href="">all connectors</a> / <a href="">eCommerce</a> / <a href="">marketplaces</a> / <a href="">ERP/accounting</a> / <a href="">POS</a></p>
 	</div>
 	<div class="centertable">
 		<table>
 			<tr>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td1"></div>
 					<h3>Connect NetSuite</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td2"></div>
 					<h3>Connect Magento</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td3"></div>
 					<h3>Connect Shopify</h3>
 				</div></td>
 			</tr>
 			<tr>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td4"></div>
 					<h3>Connect Amazon</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td5"></div>
 					<h3>Connect Amazon Webstore</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td6"></div>
 					<h3>Connect Fulfillment by Amazon</h3>
 				</div></td>
 			</tr>
 			<tr>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td7"></div>
 					<h3>Connect Lightspeed</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td8"></div>
 					<h3>Connect eBay</h3>
 				</div></td>
-				<td><div>
+				<td class="connections"><div>
 					<div class="td9"></div>
 					<h3>Connect Bigcommerce</h3>
+				</div></td>
+			</tr>
+			<tr>
+				<td class="connections"><div>
+					<div class="td10"></div>
+					<h3>Connect Microsoft Dynamics RMS</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td11"></div>
+					<h3>Connect QuickBooks</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td12"></div>
+					<h3>Connect Sage 100e</h3>
+				</div></td>
+			</tr>
+			<tr>
+				<td class="connections"><div>
+					<div class="td13"></div>
+					<h3>Connect AspDotNetStorefront</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td10"></div>
+					<h3>Connect Microsoft Dynamics GP</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td10"></div>
+					<h3>Connect Microsoft Dynamics NAV</h3>
+				</div></td>
+			</tr>
+			<tr>
+				<td class="connections"><div>
+					<div class="td10"></div>
+					<h3>Connect Microsoft Dynamics SL</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td14"></div>
+					<h3>Coming Soon...</h3>
+				</div></td>
+				<td class="connections"><div>
+					<div class="td15"></div>
+					<h3>Coming Soon...</h3>
 				</div></td>
 			</tr>
 		</table>
 	</div>
 	<div class="centerdiv">
 		<table class="center">
-			<tr>
+			<tr class="greyheader">
 				<th class="midline">Services</th>
 				<th>Platform Overview</th>
 			</tr>
-			<tr>
+			<tr class="greytext">
 				<td class="midline">Turn to the multichannel experts to connect your systems, improve operations and drive revenue</td>
 				<td>If you're looking for the page with all the geeky details, you found it</td>
 			</tr>
