--- a/Assignments/DConner/SadSadPlaceholder/FormanGriddle/Index/Nine_Fortress_Index.html
+++ b/Assignments/DConner/SadSadPlaceholder/FormanGriddle/Index/Nine_Fortress_Index.html
@@ -55,8 +55,8 @@
    </div>
 
 
-   <div class="moustache">
-      <img src="../IMAGES/THE_TEAM.png" width="450" height="200" alt="TheTeam" usemap="#teamspace"/>
+   <div class="moustache" style="position: relative;">
+      <img style="z-index:0; position:relative;" src="../IMAGES/THE_TEAM.png" width="450" height="200" alt="TheTeam" usemap="#teamspace"/>
       <map name="teamspace">
          <area shape="poly" coords="9,35,9,135,84,135,84,54,109,54,109,35" href="Nine_Fortress_Index.html" onmouseover="charON('PURP');" onmouseout="charOFF('PURP');" alt="Purp" title="Purp">
          <area shape="poly" coords="84,54,184,54,184,154,84,154" href="Nine_Fortress_Index.html" onmouseover="charON('BLOOM');" onmouseout="charOFF('BLOOM');" alt="Bloom" title="Bloom">
@@ -64,7 +64,23 @@
          <area shape="poly" coords="264,25,364,25,364,71,342,71,342,125,264,125" href="Nine_Fortress_Index.html" onmouseover="charON('GRIM');" onmouseout="charOFF('GRIM');" alt="Grim" title="Grim">
          <area shape="poly" coords="342,71,442,71,442,171,342,171" href="Nine_Fortress_Index.html" alt="Amadaus" onmouseover="charON('AMADAUS');" onmouseout="charOFF('AMADAUS');" title="Amadaus"
       </map>
-
+      <div>
+         <div id="PURP" class="freeman one">
+            <img src="../IMAGES/PURP.png" width="135" height="193" border="0" />
+         </div>
+         <div id="BLOOM" class="freeman two">
+            <img src="../IMAGES/BLOOM.png" width="135" height="193" border="0" />
+         </div>
+         <div id="REED" class="freeman three">
+            <img src="../IMAGES/REED.png" width="135" height="193" border="0" />
+         </div>
+         <div id="GRIM" class="freeman four">
+            <img src="../IMAGES/GRIM.png" width="135" height="193" border="0" />
+         </div>
+         <div id="AMADAUS" class="freeman five">
+            <img src="../IMAGES/AMADAUS.png" width="135" height="193" border="0" />
+         </div>
+      </div>
    </div>
 </body>
 
