--- a/Assignments/DConner/nChannel/vCHENAL/vChannel.html
+++ b/Assignments/DConner/nChannel/vCHENAL/vChannel.html
@@ -129,18 +129,18 @@
 
 <!-- Sixth -->
 <div class="orangeBack">
-   <h1>24/7 Customer Support</h1>
-   <p>Talk to an vChannel expert anytime - we are here to help. We are a team of real automated machines who can provide direction and answer any questions you might have. No voicemails and we provide 100% genuine Indian support.</p>
-   <h1>1-999-999-9999</h1>
+   <h1 class="whiteText">24/7 Customer Support</h1>
+   <p class="whiteText">Talk to an vChannel expert anytime - we are here to help. We are a team of real automated machines who can provide direction and answer any questions you might have. No voicemails and we provide 100% genuine Indian support.</p>
+   <h1 class="whiteText">1-999-999-9999</h1>
    <div>
-      <p>Email Us for More Info</p>
-      <a>email us</a>
-      <p>We have a solution for any scenario</p>
+      <p class="whiteText">Email Us for More Info</p>
+      <a class="whiteText">email us</a>
+      <p class="whiteText">We have a solution for any scenario</p>
    </div>
    <div>
-      <p>Chat with Us Online</p>
-      <a>chat now</a>
-      <p>Chat with us during business hours(ETPHONEHOME).</p>
+      <p class="whiteText">Chat with Us Online</p>
+      <a class="whiteText">chat now</a>
+      <p class="whiteText">Chat with us during business hours(ETPHONEHOME).</p>
    </div>
 </div>
 
@@ -222,7 +222,7 @@
 
 <!-- Twelth -->
 <div class="darkerGreyBack">
-   <p>Copyweight © 1783 | No Rights Reserved, vChannel</p>
+   <p class="whiteText">Copyweight © 1783 | No Rights Reserved, vChannel</p>
 </div>
 
 
