--- a/Assignments/DConner/nChannel/vCHENAL/vChannel.html
+++ b/Assignments/DConner/nChannel/vCHENAL/vChannel.html
@@ -7,13 +7,21 @@
 
 <body>
 <!-- Persistant Bar Thingy -->
-<div>
+<div class="darkGreyBack persist full">
+   <img src="logo.png" class="lefty" />
+   <ul>
+      <li class="whiteText righty">products</li>
+      <li class="whiteText righty">connectors</li>
+      <li class="whiteText righty">industries</li>
+      <li class="whiteText righty">pricing</li>
+      <li class="whiteText righty">news & resources</li>
+   </ul>
 </div>
 
 <!-- First Section -->
 <div class="blueBack">
-<h1>Multichannel...simplified</h1>
-<p>Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</p>
+<h1 class="whiteText">Multichannel...simplified</h1>
+<p class="whiteText">Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</p>
 <img src="PICTAR.png" />
 </div>
 
@@ -27,7 +35,7 @@
    <!-- First Duo -->
    <div class="tender">
       <!-- Section 1 -->
-      <div class="holdme, gently">
+      <div class="holdme gently">
          <!-- Picture part -->
          <div class="holdme">
             <img src="recycle.png" />
@@ -40,7 +48,7 @@
          </div>
       </div>
       <!-- Section 2 -->
-      <div class="holdme, gently">
+      <div class="holdme gently">
          <!-- Picture part -->
          <div class="holdme">
             <img src="moveOvar.png" />
@@ -56,7 +64,7 @@
    <!-- Second Duo -->
    <div class="tender">
       <!-- Section 3 -->
-      <div class="holdme, gently">
+      <div class="holdme gently">
          <!-- Picture part -->
          <div class="holdme">
             <img src="unRealistic.png" />
@@ -69,7 +77,7 @@
          </div>
       </div>
       <!-- Section 4 -->
-      <div class="holdme, gently">
+      <div class="holdme gently">
          <!-- Picture part -->
          <div class="holdme">
             <img src="realistic.png" />
