--- a/Assignments/DConner/nChannel/vCHENAL/vChannel.html
+++ b/Assignments/DConner/nChannel/vCHENAL/vChannel.html
@@ -19,7 +19,7 @@
 </div>
 
 <!-- First Section -->
-<div class="blueBack">
+<div class="blueBack tophat">
 <h1 class="whiteText">Multichannel...simplified</h1>
 <p class="whiteText">Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</p>
 <img src="PICTAR.png" />
