MORE BLAHHH NCHANNEL

--- a/Assignments/akanios/nChannel Mimic/index.html
+++ b/Assignments/akanios/nChannel Mimic/index.html
@@ -48,5 +48,17 @@
 		<a href="https://www.nchannel.com/contact/" class="btn">contact us today!</a>
 	</div>
 
+	<div class="logos">
+		<img src="magento.jpg">
+		<img src="rightnowebay.jpg">
+		<img src="microsoftpartner.jpg">
+		<img src="ebaycompatible.jpg">
+	</div>
+
+	<div class="footer">
+	</div>
+
+	<div class="copyright"></div>
+
 </body>
 </html>
