--- a/Assignments/abrand/nchannel assignment/nchannelwebpage.html
+++ b/Assignments/abrand/nchannel assignment/nchannelwebpage.html
@@ -94,6 +94,7 @@
     <div class="footer-section">
                         <div class="contain">
                 <div class="quarter padded">
+
                     <h3>Connect</h3>
                     <a target="_blank" href="//www.facebook.com/nChannelCloud">
                         <div class="social icon-facebook first"></div>
@@ -114,13 +115,13 @@
                 <div class="quarter padded">
                                                                                     <h3>News &amp; Updates</h3>
                         <p><span>October 16, 2014</span><br>
-                        I attended Gartner Symposium ITXPO in Orlando, FL last week.…</p>
+                        I attended Gartner Symposium ITXPO in Orlando, FL last week.</p>
                         <a class="perma" href="https://www.nchannel.com/3-takeaways-gartner-symposium-itxpo-2014/">View Article</a>
                                                         </div>
-                <div class="quarter">
+                <div class="quarter1">
                     <h3>Explore More</h3>
                                             <ul><li id="menu-item-295" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-295"><a href="https://www.nchannel.com/about/">about</a></li>
-<li id="menu-item-8967" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8967"><a href="https://www.nchannel.com/security/">security</a></li>
+<li id="menu-item-8967" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8967" class="rightalign"><a href="https://www.nchannel.com/security/" class="rightalign">security</a></li>
 <li id="menu-item-299" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-299"><a href="https://www.nchannel.com/partners/">partners</a></li>
 <li id="menu-item-770" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-770"><a href="https://www.nchannel.com/pci-compliance/">pci compliance</a></li>
 <li id="menu-item-8195" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8195"><a href="https://www.nchannel.com/privacy-policy/">privacy policy</a></li>
