nChannel Mark II - XLII

--- a/Assignments/akanios/nChannel Mimic/index.html
+++ b/Assignments/akanios/nChannel Mimic/index.html
@@ -2,63 +2,107 @@
 <head>
 	<title>nChannel Multichannel Operations Management Pricing</title>
 	<link rel="stylesheet" type="text/css" href="site.css">
+
+	<link rel="stylesheet" href="styles/css/font-awesome.min.css">
+	
 </head>
-<body>
+	<body>
 
-	<div class="hidheader">
-		<p class="toptext">
-			contact | support
-		</p>
-	</div>
-	<div class="overheader">
-		<ul>
-			<li>products</li>
-			<li>connectors</li>
-			<li>industries</li>
-			<li>pricing</li>
-			<li>news & resources</li>
-		</ul>
-	</div>
+		<div class="container">	
+			<div class="hidheader">
+				<p class="toptext">
+					contact | support
+				</p>
+			</div>
+				<div class="overheader">
+				<div class="centerHeader">
+					<img class="logo" src="logo.jpg">
+					<pre class="barText">
+						products   connectors  industries   pricing   news & resources
+					</pre>
+				</div>
+				</div>
 
-	<div class="bluebody">
-		<div class="bluetext"><h1>No annual contracts<br>
-		No transaction fees<br>
-		Flat monthly pricing<br>
-		Unlimited data & users<br></h1>
+			<div class="bluebody">
+				<div class="under">
+					<a href="https://www.nchannel.com/pricing/" class="btnChat">chat now</a>
+					<a href="https://www.nchannel.com/pricing/#" class="btnQuote">get a quote</a>
+					<a href="tel:1-844-533-1333" class="btnTel">1-844-533-1333</a>
+				</div>
+				<div class="bluetext"><h1>No annual contracts<br>
+				No transaction fees<br>
+				Flat monthly pricing<br>
+				Unlimited data & users<br></h1>
+				</div>
+			</div>
+
+			<div class="dots">
+			</div>
+
+			<div class="boxcolumn">
+				<div class="column">
+					<h3 class="colHead" align="center">BASIC</h3>
+				</div>
+				<div class="column">
+					<h3 class="colHead" align="center">STANDARD</h3>
+				</div>
+				<div class="column">
+					<h3 class="colHead" align="center">PRO<h3>
+				</div>
+				<div class="column">
+					<h3 class="colHead" align="center">ENTERPRISE</h3>
+				</div>
+			</div>
+
+			<div class="quotebox">
+				<h2 class="quotetext">Get your free customized quote.</h2>
+				<a href="https://www.nchannel.com/contact/" class="btnContact">contact us today!</a>
+			</div>
+
+			<div class="bottomLists">
+				<p class="monthP">Monthly Subscriptions Include:</p>
+				<div class="list1">
+					<ul class="checkList">
+						<li>ANYTIME, ANYWHERE ACCESS VIA THE CLOUD</li><br>
+						<li>UNLIMITED DATA AND USERS</li><br>
+						<li>NO PERCENTAGE OF TRANSACTION FEES</li><br>
+						<li>24X7 PROACTIVE CUSTOMER SERVICE</li><br>
+						<li>MONTH-TO-MONTH SUBSCRIPTION/NO ANNUAL CONTRACTS</li>
+					</ul>
+				</div>
+				<p class="oneTime">One-time configuration fee includes:</p>
+				<div class="list2">
+					<ul class="checkList">
+						<li>CONFIGURING NEW ACCOUNT</li><br>
+						<li>ASSIST WITH DATA STANDARDIZATION</li><br>
+						<li>CUSTOMIZE CONNECTORS</li><br>
+						<li>TESTING</li>
+					</ul>
+			</div>
+
+			<div class="logos">
+				<img class="logimg" src="magento.jpg">
+				<img class="logimg" src="rightnowebay.jpg">
+				<img class="logimg" src="microsoftpartner.jpg">
+				<img class="logimg" src="ebaycompatible.jpg">
+			</div>
+
+			<div class="footer">
+				<div class="connect">
+					<h3>Connect</h3>
+					<i class="fa fa-facebook bottombtn"></i>
+					<i class="fa fa-twitter bottombtn"></i>
+					<i class="fa fa-linkedin-square bottombtn"></i>
+					<i class="fa fa-youtube bottombtn"></i>
+					<i class="fa fa-google-plus bottombtn"></i>
+				</div>
+
+			</div>
+
+			<div class="copyright">
+				<span class="copytext">Copyright  2014 | All Rights Reserved, nChannel</span>
+			</div>
 		</div>
-	</div>
 
-	<div class="boxcolumn">
-		<div class="column">
-			<h3 align="center">BASIC</h3>
-		</div>
-		<div class="column">
-			<h3 align="center">STANDARD</h3>
-		</div>
-		<div class="column">
-			<h3 align="center">PRO<h3>
-		</div>
-		<div class="column">
-			<h3 align="center">ENTERPRISE</h3>
-		</div>
-	</div>
-
-	<div class="quotebox">
-		<h2 class="quotetext">Get your free customized quote.</h2>
-		<a href="https://www.nchannel.com/contact/" class="btn">contact us today!</a>
-	</div>
-
-	<div class="logos">
-		<img src="magento.jpg">
-		<img src="rightnowebay.jpg">
-		<img src="microsoftpartner.jpg">
-		<img src="ebaycompatible.jpg">
-	</div>
-
-	<div class="footer">
-	</div>
-
-	<div class="copyright"></div>
-
-</body>
+	</body>
 </html>
