--- a/Assignments/clinville/NChannel/nchannel.html
+++ b/Assignments/clinville/NChannel/nchannel.html
@@ -6,9 +6,9 @@
 <body>
 
 	<div>
-		<div class="darkertop"></div>
-		<div class="darktop"></div>
-		<div class="greytop"></div>
+		<div class="darkertop"> <a href="https://www.nchannel.com/contact/">Contact</a> | Support </div>
+		<div class="darktop"> overiew     products     connectors     industries     pricing     news & resources</div>
+		<div class="greytop"> all connectors    eCommerce   markerplaces   ERP/accounting   POS</div>
 	</div>
 
 	<div class="maindiv">
